# ddl

./: .gitignore  .gitlab-ci.yml  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.py
ddl/: __init__.py  connection.py  datapusher.py  datasetwrapper.py  ddl_env.py  exceptions.py  mpi_dataloader.py  protocols.py  shuffle.py  types.py  utils.py
src/: mpi_dataloader.py
tests/: run_ddl.py  test_ddl.py
