[tool.poetry]
name = "ddl"
version = "0.1.0"
description = ""
authors = ["Maximilian Sander <maximilian_sander@mailbox.org>"]
readme = "README.md"

[tool.poetry.dependencies]
mpi4py = "^3.1.4"
python = ">=3.10,<3.11"
cleverdict = { git = "https://github.com/PFython/cleverdict.git", branch = "master" }
numpy = "^1.26.0"
pytorch-triton-rocm = { url = "https://download.pytorch.org/whl/pytorch_triton_rocm-2.1.0-cp310-cp310-linux_x86_64.whl#sha256=12fbf2ded4e5efcab0ff9ecc2de17f667dc4ef0a8a952ab9b549344ca4feb19e" }
torch = { url = "https://download.pytorch.org/whl/rocm5.6/torch-2.1.0%2Brocm5.6-cp310-cp310-linux_x86_64.whl" }
backpack-for-pytorch = "^1.6.0"
pytest-timeout = "^2.1.0"
ruff = "^0.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
mypy = "^1.5.1"

[tool.ruff]
# Set the maximum line length to 119.
line-length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
